--- a/src/main/resources/templates/fragments/contacto/contactoshow.html
+++ b/src/main/resources/templates/fragments/contacto/contactoshow.html
@@ -102,6 +102,12 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                                 <p class="form-control-static" th:text="${contacto.direccion}">Fecha de Nacimiento</p>
                             </div>
                         </div>
+                          <div class="form-group">
+                            <label class="col-sm-5 control-label">Sexo de Contacto:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${contacto.sexocontacto}">Apellido de Empleado</p>
+                            </div>
+                        </div>
                     </div> 
                     <div class="col-md-6">
                         <div class="form-group">
