--- a/src/main/resources/templates/fragments/hijodiscapacidad/hijodiscapacidadshow.html
+++ b/src/main/resources/templates/fragments/hijodiscapacidad/hijodiscapacidadshow.html
@@ -113,7 +113,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <div class="form-group">
                             <label class="col-sm-7 control-label">Fecha de Nacimiento:</label>
                             <div class="col-sm-5">
-                                <p class="form-control-static" th:text="${hijodiscapacidad.fechanamimientohijosdiscapacidad}">DUI</p>
+                                <p class="form-control-static" th:text="${#calendars.format(hijodiscapacidad.fechanamimientohijosdiscapacidad, 'dd/MM/yyyy')}">DUI</p>
                             </div>
                         </div>
                         
