--- a/src/main/resources/templates/fragments/ubicacionfisica/ubicacionfisicashow.html
+++ b/src/main/resources/templates/fragments/ubicacionfisica/ubicacionfisicashow.html
@@ -84,6 +84,12 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${ubicacionfisica.codigoubicacion}">codigo de Empleado</p></div>
                         </div>
+                          <div class="form-group">
+                            <label class="col-sm-5 control-label">Nombre de Ubicación</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${ubicacionfisica.nombreubicacion}">Nombre de Empleado</p>
+                            </div>
+                        </div>
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Jefe Inmediato:</label>
                             <div class="col-sm-7">
