--- a/src/main/resources/templates/fragments/beneficio/beneficioshow2.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficioshow2.html
@@ -54,14 +54,14 @@
                  <div class="form-group">
                     <label class="col-sm-2 control-label">Fecha de Inicio de Beneficio:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${beneficio.fechainiciobeneficio}">descripcion</p>
+                        <p class="form-control-static" th:text="${#calendars.format(beneficio.fechainiciobeneficio, 'dd/MM/yyyy')}">descripcion</p>
                     </div>
                 </div>
                 
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Fecha Fin de Beneficio:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${beneficio.fechafinalizarbeneficio}">descripcion</p>
+                        <p class="form-control-static" th:text="${#calendars.format(beneficio.fechafinalizarbeneficio, 'dd/MM/yyyy')}">descripcion</p>
                     </div>
                 </div>
                 
