--- a/src/main/resources/templates/fragments/formacionacademica/formacionacademicaform.html
+++ b/src/main/resources/templates/fragments/formacionacademica/formacionacademicaform.html
@@ -95,7 +95,7 @@
                         <span class="popuptext" id="poppup12">Ingrese los años aprobados del Empleado solo se admitiran  caracteres numericos.!</span>
                     </div>
                 </div>
-                 <div class="form-group">
+<!--                 <div class="form-group">
                 <label class="col-sm-3 control-label">Pais(*):</label>
                 <div class="col-sm-4">
                     <select class="form-control" name="mun" >
@@ -109,7 +109,7 @@
                         
                         <span class="popuptext" id="poppup14">Seleccione el pais en el que realizo los estudios el Empleado desplegando la lista.!</span>
                     </div>
-            </div>
+            </div>-->
                 <div class="form-group">
                 <label class="col-sm-3 control-label">Fecha Desde(*):</label>
                 <div class="col-sm-2">
