--- a/src/main/resources/templates/fragments/puesto/puestoshow.html
+++ b/src/main/resources/templates/fragments/puesto/puestoshow.html
@@ -33,10 +33,24 @@
                         <p class="form-control-static" th:text="${puesto.nombrepuesto}">Nombre de Puesto</p>
                     </div>
                 </div>
+                      <div class="form-group">
+                    <label class="col-sm-5 control-label">Categoria de Puesto:</label>
+                    <div class="col-sm-7">
+                        <p class="form-control-static" th:text="${puesto.categoriapuesto}">Nombre de Puesto</p>
+                    </div>
+                </div>
+                     
                 <div class="form-group">
                     <label class="col-sm-5 control-label">Sueldo Base:</label>
                     <div class="col-sm-7">
                         <p class="form-control-static" th:text="${puesto.sueldobase}">Sueldo Base</p>
+                    </div>
+                </div>
+                     
+                     <div class="form-group">
+                    <label class="col-sm-5 control-label">Ubicacion Geografica del Puesto:</label>
+                    <div class="col-sm-7">
+                        <p class="form-control-static" th:text="${puesto.ubicacionpuesto}">Nombre de Puesto</p>
                     </div>
                 </div>
                 <div class="form-group">
@@ -45,32 +59,78 @@
                         <p class="form-control-static" th:text="${puesto.codigocargopuesto}">Codigo de Cargo</p>
                     </div>
                 </div>
-                  </div> 
-                      <div class="col-md-6">
-                          <div class="form-group">
+                     <div class="form-group">
+                    <label class="col-sm-5 control-label">Forma de Pago:</label>
+                    <div class="col-sm-7">
+                        <p class="form-control-static" th:text="${puesto.formapago}">Nombre de Puesto</p>
+                    </div>
+                </div>
+                      <div class="form-group">
                     <label class="col-sm-7 control-label">Fecha de Aprobación:</label>
                     <div class="col-sm-5">
-                        <p class="form-control-static" th:text="${puesto.fechaaprobacion}">Fecha de Aprobacion</p>
+                        <p class="form-control-static" th:text="${#calendars.format(puesto.fechaaprobacion, 'dd/MM/yyyy')}">Fecha de Aprobacion</p>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-7 control-label">Fecha de Contratación Desde:</label>
                     <div class="col-sm-5">
-                        <p class="form-control-static" th:text="${puesto.fechacontrataciondesde}">Fecha de Contratacion Desde</p>
+                        <p class="form-control-static" th:text="${#calendars.format(puesto.fechacontrataciondesde, 'dd/MM/yyyy')}">Fecha de Contratacion Desde</p>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label class="col-sm-7 control-label">Fecha Contratación Hasta:</label>
+               
+               
+                </div>
+                      <div class="col-md-6">
+                           <div class="form-group">
+                    <label class="col-sm-5 control-label">Fecha Contratación Hasta:</label>
                     <div class="col-sm-5">
-                        <p class="form-control-static" th:text="${puesto.fechacontratacionhasta}">Fecha Contratación Hasta</p>
+                        <p class="form-control-static" th:text="${#calendars.format(puesto.fechacontratacionhasta, 'dd/MM/yyyy')}">Fecha Contratación Hasta</p>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label class="col-sm-7 control-label">Fecha de Baja:</label>
+                      <div class="form-group">
+                    <label class="col-sm-5 control-label">Fecha de Creacion</label>
                     <div class="col-sm-5">
-                        <p class="form-control-static" th:text="${puesto.fechabaja}">Fecha de Baja</p>
+                        <p class="form-control-static" th:text="${#calendars.format(puesto.fechacreacion, 'dd/MM/yyyy')}">Fecha de Baja</p>
                     </div>
                 </div>
+                           <div class="form-group">
+                    <label class="col-sm-5 control-label">Fecha de Baja:</label>
+                    <div class="col-sm-5">
+                        <p class="form-control-static" th:text="${#calendars.format(puesto.fechabaja, 'dd/MM/yyyy')}">Fecha de Baja</p>
+                    </div>
+                </div>
+                      <div class="form-group">
+                    <label class="col-sm-5 control-label">Fecha de Modificacion</label>
+                    <div class="col-sm-5">
+                        <p class="form-control-static" th:text="${#calendars.format(puesto.fechamodificacion, 'dd/MM/yyyy')}">Fecha de Baja</p>
+                    </div>
+                     </div>
+                          <div class="form-group">
+                    <label class="col-sm-5 control-label">Nivel del Puesto:</label>
+                    <div class="col-sm-7">
+                        <p class="form-control-static" th:text="${puesto.nivelpuesto}">Nombre de Puesto</p>
+                    </div>
+                </div>
+                     <div class="form-group">
+                    <label class="col-sm-5 control-label">Sublinea del Puesto:</label>
+                    <div class="col-sm-7">
+                        <p class="form-control-static" th:text="${puesto.sublinea}">Nombre de Puesto</p>
+                    </div>
+                </div>
+                          <div class="form-group">
+                    <label class="col-sm-5 control-label">Tipo de Fianza del Puesto:</label>
+                    <div class="col-sm-7">
+                        <p class="form-control-static" th:text="${puesto.tipofinanza}">Nombre de Puesto</p>
+                    </div>
+                </div>
+                           <div class="form-group">
+                    <label class="col-sm-5 control-label">Estado del Puesto:</label>
+                   <div class="col-sm-7">
+                                <p class="form-control-static">  <span th:if="${puesto.estadopuesto} == 1"  th:text="Activo"  ></span> <span th:if="${puesto.estadopuesto} == 2"  th:text="Plaza Ocupada"></span> <span th:if="${puesto.estadopuesto} == 3"  th:text="de Baja"></span>  </p>
+                            </div>
+                </div>
+                          
+                          
                   </div> 
                 
                 
