--- a/src/main/resources/templates/fragments/otherreports/estadisticoactivoreporte.html
+++ b/src/main/resources/templates/fragments/otherreports/estadisticoactivoreporte.html
@@ -11,7 +11,7 @@
     
      
      
-    <title>SISADMRH-Estradistico de Personal Activo</title>
+    <title>SISADMRH-Estadistico de Personal Activo</title>
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
