--- a/src/main/resources/templates/fragments/otherreports/evaluacioncapreporte.html
+++ b/src/main/resources/templates/fragments/otherreports/evaluacioncapreporte.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
-        <title>Reporte de Evaluacion de CApacitaciones</title>
+        <title>Reporte de Evaluacion de Capacitaciones</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
